force-app/main/default/objects/WorkOrder/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Section__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Problem</valueSetName>
    </valueSet>
</CustomField>