force-app/main/default/objects/WorkOrder/fields/Issue_Section__c.field-meta.xml
<CustomField>
    <fullName>Issue_Section__c</fullName>
    <label>Issue Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type_Section</valueSetName>
    </valueSet>
</CustomField>